Wed  1 Sept 2010 23:14:00 BST - Release 0.86

  Add rest_serializer_json_options config key useable to set options
  like relaxed => 1 to be passed to the JSON serializer (Ton Voon)

  Make Data::Dumper unserializer safer by using a Safe compartment (Ton Voon)

Thu 13 May 2010 10:09:19 CEST - Release 0.85

  Make Catalyst::Action::Serialize::View return directly rather than serializing
  a response for 3XX status codes. This stops back-compat breakage from the
  previous change (in 0.84), whilst also allowing actual data serializers
  to still handle 3XX.

  Fix docs in Catalyst::TraitFor::Request::REST::ForBrowsers. (RT#54983)

Thu  6 May 2010 09:27:56 BST - Release 0.84
  Revert always using a trait rather than Catalyst::Request::REST to improve
  debug messages.

  Add a status_multiple_choices helper method to the Controller base class.

  Allow 3XX responses to be serialized.

Mon  8 Feb 2010 22:17:12 GMT - Release 0.83
  Make it possible to deserialize a request with a DELETE method. This probably
  breaks 'strict' REST guidelines, but is useful for being able to delete multiple
  resources from a single call by providing a batch delete method.

  Remove JSONP from the list of default serializers (RT#54336)

  Fix MANIFEST (RT#54408)

Thu  4 Feb 2010 22:31:57 GMT - Release 0.82

  Integrated Catalyst::Request::REST::ForBrowsers as
  Catalyst::TraitFor::Request::ForBrowsers. (Dave Rolsky)

  Clarified docs so that they encourage the use of the request traits, rather
  than using Catalyst::Request::REST. (Dave Rolsky)

  When Catalyst::Action::REST or Controller::REST automatically add the trait,
  your request class will no longer end up getting set to
  Catalyst::Request::REST. Instead, creates an anon class with the appropriate
  role. (Dave Rolsky)

  Shut up log output from the tests. (Dave Rolsky)

  Added a $VERSION to every module, mostly to make sure that when people
  install Catalyst::Request::REST::ForBrowsers, they get the version in this