@@ -7,7 +7,7 @@ extends 'Catalyst::Action';
 use YAML::Syck;
 use URI::Find;
 
-our $VERSION = '0.86';
+our $VERSION = '0.87';
 $VERSION = eval $VERSION;
 
 sub execute {
